--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<html>
+  <head>
+    <style>
+    .body {
+      
+    }  
+    </style>
+    
+  </head>
+  <body>
+    <div class="container">
+      <div class="card"> </div>
+    </div>
+  </body>
+</html>
